[package]
name = "maria-linalg"
description = "A simple linear algebra processing package."
documentation = "https://docs.rs/maria-linalg/"
license = "MIT"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"
